fix: remove all hardcoded /home/sudhir paths — portable for any machine
Logo handling:
- Upload dir: /home/sudhir/Desktop/ATG → ~/.atg/logos/ (OS-agnostic)
- Default logo paths in DB seed and code constants: cleared to empty string
- readLogo() + serveLogo(): try user-uploaded filesystem path first,
  then fall back to bundled classpath images (static/images/clglogo.png,
  ownerlogo.png) — works on any machine with no pre-existing files
- data.sql: college_logo / owner_logo seeded as empty (uses classpath default)
- how-to-use.html: updated logo storage path description

App is now fully portable — no references to developer's machine.